// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table> should render a dynamic table correctly 1`] = `
<table
  className={undefined}
  role="grid"
>
  <thead>
    <tr
      role="row"
    >
      <th
        aria-sort="none"
        className={undefined}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        
      </th>
      <th
        aria-sort="none"
        className={undefined}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Header
      </th>
      <th
        aria-sort="none"
        className={undefined}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Header
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Header
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      role="row"
    >
      <th
        className={undefined}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        111
      </td>
    </tr>
    <tr
      role="row"
    >
      <th
        className={undefined}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        222
      </td>
    </tr>
    <tr
      role="row"
    >
      <th
        className={undefined}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        333
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table> should render a headerless table correctly 1`] = `
<table
  className={undefined}
  role="grid"
>
  <tbody>
    <tr
      role="row"
    >
      <th
        className={undefined}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        111
      </td>
    </tr>
    <tr
      role="row"
    >
      <th
        className={undefined}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        222
      </td>
    </tr>
    <tr
      role="row"
    >
      <th
        className={undefined}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        333
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table> should render a pre-sorted table correctly 1`] = `
<table
  className={undefined}
  role="grid"
>
  <thead>
    <tr
      role="row"
    >
      <th
        aria-sort="none"
        className={undefined}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Name
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Users
      </th>
      <th
        aria-sort="descending"
        className="u-align--right"
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Units
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Revenue
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      role="row"
    >
      <td
        className={undefined}
        role="gridcell"
      >
        Melon
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        12
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        23
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        $99
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        className={undefined}
        role="gridcell"
      >
        Grape
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        8
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        19
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        $70
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        className={undefined}
        role="gridcell"
      >
        Apple
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        9
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        17
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        $120
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table> should render a sortable table correctly 1`] = `
<table
  className="p-table--sortable"
  role="grid"
>
  <thead>
    <tr
      role="row"
    >
      <th
        aria-sort="none"
        className={undefined}
        onClick={[Function]}
        role="columnheader"
        scope="col"
      >
        Name
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={[Function]}
        role="columnheader"
        scope="col"
      >
        Users
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={[Function]}
        role="columnheader"
        scope="col"
      >
        Units
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={[Function]}
        role="columnheader"
        scope="col"
      >
        Revenue
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      role="row"
    >
      <td
        className={undefined}
        role="gridcell"
      >
        Grape
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        8
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        19
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        $70
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        className={undefined}
        role="gridcell"
      >
        Melon
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        12
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        23
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        $99
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        className={undefined}
        role="gridcell"
      >
        Apple
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        9
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        17
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        $120
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table> should render a static table correctly 1`] = `
<table
  className={undefined}
  role="grid"
>
  <thead>
    <tr
      role="row"
    >
      <th
        aria-sort="none"
        className={undefined}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        
      </th>
      <th
        aria-sort="none"
        className={undefined}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Header
      </th>
      <th
        aria-sort="none"
        className={undefined}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Header
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Header
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      role="row"
    >
      <th
        className={undefined}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        111
      </td>
    </tr>
    <tr
      role="row"
    >
      <th
        className={undefined}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        222
      </td>
    </tr>
    <tr
      role="row"
    >
      <th
        className={undefined}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={undefined}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        333
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table> should render an expandable table correctly 1`] = `
<table
  className="p-table-expanding"
  role="grid"
>
  <thead>
    <tr
      role="row"
    >
      <th
        aria-sort="none"
        className={undefined}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Username
      </th>
      <th
        aria-sort="none"
        className={undefined}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Email
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Height (cm)
      </th>
      <th
        aria-sort={null}
        className="u-align--right"
        role="columnheader"
        scope="col"
        style={
          Object {
            "flexGrow": "0.5",
          }
        }
      >
        Expand
      </th>
      <td
        className="u-hide"
        role="gridcell"
      />
    </tr>
  </thead>
  <tbody>
    <tr
      role="row"
    >
      <td
        className={undefined}
        role="gridcell"
      >
        aeinstein
      </td>
      <td
        className={undefined}
        role="gridcell"
      >
        albert.einstein@yahoo.com
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        175
      </td>
      <td
        className="u-align--right"
        role="gridcell"
        style={
          Object {
            "flexGrow": "0.5",
          }
        }
      >
        <button
          className="p-button--base"
          disabled={false}
          href={undefined}
          onClick={[Function]}
          style={
            Object {
              "padding": "0.5rem",
            }
          }
        >
          <i
            className="p-icon--plus"
          />
        </button>
      </td>
      <td
        aria-hidden={true}
        className="p-table-expanding__panel u-hide"
        expandedCell={true}
        role="gridcell"
      >
        Hello
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        className={undefined}
        role="gridcell"
      >
        shawking
      </td>
      <td
        className={undefined}
        role="gridcell"
      >
        stephen.hawking@hotmail.com
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        183
      </td>
      <td
        className="u-align--right"
        role="gridcell"
        style={
          Object {
            "flexGrow": "0.5",
          }
        }
      >
        <button
          className="p-button--base"
          disabled={false}
          href={undefined}
          onClick={[Function]}
          style={
            Object {
              "padding": "0.5rem",
            }
          }
        >
          <i
            className="p-icon--plus"
          />
        </button>
      </td>
      <td
        aria-hidden={true}
        className="p-table-expanding__panel u-hide"
        expandedCell={true}
        role="gridcell"
      >
        Hello
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        className={undefined}
        role="gridcell"
      >
        mcurie
      </td>
      <td
        className={undefined}
        role="gridcell"
      >
        marie.curie@gmail.com
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        158
      </td>
      <td
        className="u-align--right"
        role="gridcell"
        style={
          Object {
            "flexGrow": "0.5",
          }
        }
      >
        <button
          className="p-button--base"
          disabled={false}
          href={undefined}
          onClick={[Function]}
          style={
            Object {
              "padding": "0.5rem",
            }
          }
        >
          <i
            className="p-icon--plus"
          />
        </button>
      </td>
      <td
        aria-hidden={true}
        className="p-table-expanding__panel u-hide"
        expandedCell={true}
        role="gridcell"
      >
        Hello
      </td>
    </tr>
  </tbody>
</table>
`;
